# Searching-Engine

./: CMakeLists.txt  README.md  answers.json  config.json  requests.json
include/: converterJson.h  converterjson.h  invertedIndex.h  invertedindex.h  searchServer.h  searchserver.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt
src/: CMakeLists.txt  converterJson.cpp  converterjson.cpp  invertedIndex.cpp  invertedindex.cpp  main.cpp  searchServer.cpp  searchserver.cpp  test_main.cpp
tests/: CMakeLists.txt  converterJson_test.cpp  invertedIndex_test.cpp  searchServer_test.cpp
